--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ sass:
   sass_dir: _sass
 plainwhite:
   name: cs-matrix team
-  tagline: Reasearch and Software engineering
+  tagline: Research and Software engineering
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
   search: true # set to true to enable searchbar
